--- a/brand.html
+++ b/brand.html
@@ -25,6 +25,8 @@
             <li class="site-navigation-item"><a href="brand.html">Бренд</a></li>
             <li class="site-navigation-item"><a href="picture.html">Рисунок</a></li>
             <li class="site-navigation-item"><a href="test.html">Тест</a></li>
+            <li class="site-navigation-item"><a href="words.html">Слова</a></li>
+            <li class="site-navigation-item"><a href="course.html">Курсовая</a></li>
         </ul>
         <a class="account" href="#"><img src="img/account.svg" alt="account icon"></a>
     </nav>
