--- a/picture.html
+++ b/picture.html
@@ -8,6 +8,7 @@
     <link href="css/logo.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
           rel="stylesheet">
+    <link rel="icon" href="img/site-logo.png" type="image/x-icon">
 </head>
 <body>
 <header class="main-header">
@@ -24,6 +25,8 @@
             <li class="site-navigation-item"><a href="brand.html">Бренд</a></li>
             <li class="site-navigation-item"><a href="picture.html">Рисунок</a></li>
             <li class="site-navigation-item"><a href="test.html">Тест</a></li>
+            <li class="site-navigation-item"><a href="words.html">Слова</a></li>
+            <li class="site-navigation-item"><a href="course.html">Курсовая</a></li>
         </ul>
         <a class="account" href="#"><img src="img/account.svg" alt="account icon"></a>
     </nav>
